    - x2gokdrive{.c,remote.c,init.{c,h}}: patch for X.Org 1.18.x
      compatibility, merging in the content from
      patches.legacy/osuse_42.3.patch via preprocessor defines.
    - patches.xorg/: add 1.20.6 files, essentially copied and refreshed from
      1.20.5.
    - patches.xorg/: add 1.20.7 files, essentially copied and refreshed from
      1.20.6.
  * debian/control:
    + Grammar fix.
    + Remove dependencies that refer to disabled features.
    + Add build-dependency upon libpam-dev. It would really be libpam0g-dev
      currently, but that looks like a moving target.
    + Add B-D upon x11proto-gl-dev (or nil/hello).
    + Recommend x2goserver >= 4.1.0.4, we'll better stay on the 4.1.x line.
    + Try to pull libxfont1-dev (for old Ubuntu versions such as 16.04/xenial
      that don't support building X.Org against libXfont2) and fallback to
      libxfont-dev to retain the old, default behavior.
    + Make libxfont1-dev an entirely optional dependency and libxfont-dev a
      hard one. This should always install libxfont-dev (which typically is
      the libXfont2-version), but also the libXfont1-version if available.
      Ubuntu 16.04/xenial has X.Org Server 1.18.4 which is not compatible with
      libXfont2, but Debian 9/stretch uses X.Org Server 1.19.2, which is
      compatible with libXfont2 (and actually requires it), but also has both
      packages available.
  * x2gokdrive.spec:
    + Drop Debian-style formatting in description.
    + Typo fixes.
    + Remove empty line at EOF.
    + Copy summary from Debian's short description.
    + Spell out each (build) dependency on one line.
    + Whitespace-only fixes.
    + Backport changes from debian/rules.
    + Copy *.la file removal mechanism from debian/rules.
    + Pull in lsb-release on *SuSE systems and redhat-lsb otherwise for
      lsb_release, needed at package configuration time.
    + Enable hardening in a low-effort way.